--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
@@ -1189,7 +1189,7 @@
     "                \"t-statistic\": round(r[\"t_stat\"], 3),\n",
     "                \"p-value\": round(r[\"p_value\"], 3),\n",
     "            })\n",
-    "        return pd.DataFrame(rows)"
+    "        return pd.DataFrame(rows)\n"
    ]
   }
  ],
