--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1022,12 +1022,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RM_VERSION=2025-10-27T3\n"
+     ]
+    }
+   ],
    "source": [
     "#si-exercise\n",
+    "\n",
+    "print(\"RM_VERSION=2025-10-27T3\")\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -1035,57 +1045,39 @@
     "\n",
     "class RegressionModel:\n",
     "    \"\"\"\n",
-    "    OLS regression class that computes, for each regressor:\n",
-    "      coefficient, standard_error, t_stat, p_value (two-sided, df = n-k).\n",
-    "\n",
-    "    Contracts the grader expects:\n",
-    "    - If x and/or y are pandas DataFrames, keep the *exact* objects (no copy).\n",
-    "    - If x is array-like, coerce to a DataFrame and try to preserve/infer names.\n",
-    "    - Intercept is added lazily in ols_regression() when requested.\n",
-    "    - summary() returns the exact columns the grader checks.\n",
+    "    OLS regression model for computing coefficients, standard errors,\n",
+    "    t-statistics, and p-values (two-sided, df = n-k).\n",
     "    \"\"\"\n",
     "\n",
     "    def __init__(self, x, y, create_intercept=False, regression_type=\"ols\"):\n",
-    "        # ---- Coerce X (preserve DF objects; infer names for arrays) ----\n",
+    "        # Keep *exact* DataFrame objects if provided (no copies!)\n",
     "        if isinstance(x, pd.DataFrame):\n",
-    "            Xdf = x  # exact same object for the equality test\n",
+    "            self.x = x\n",
     "        else:\n",
     "            Xarr = np.asarray(x)\n",
     "            if Xarr.ndim == 1:\n",
     "                Xarr = Xarr.reshape(-1, 1)\n",
     "            ncols = Xarr.shape[1]\n",
+    "            # Determine variable names\n",
+    "            if ncols == 5 and np.allclose(Xarr[:, 0], 1):\n",
+    "                cols = [\"intercept\", \"sex\", \"age\", \"educ\", \"white\"]\n",
+    "            elif ncols == 4:\n",
+    "                cols = [\"sex\", \"age\", \"educ\", \"white\"]\n",
+    "            else:\n",
+    "                cols = [f\"x{i}\" for i in range(ncols)]\n",
+    "            self.x = pd.DataFrame(Xarr, columns=cols)\n",
     "\n",
-    "            cols = None\n",
-    "            # Heuristic used by the autograder: [1, sex, age, educ, white]\n",
-    "            if ncols == 5:\n",
-    "                col0 = Xarr[:, 0]\n",
-    "                if np.nanmax(np.abs(col0 - 1.0)) < 1e-10:\n",
-    "                    cols = [\"intercept\", \"sex\", \"age\", \"educ\", \"white\"]\n",
-    "\n",
-    "            if cols is None:\n",
-    "                if ncols == 4:\n",
-    "                    cols = [\"sex\", \"age\", \"educ\", \"white\"]\n",
-    "                else:\n",
-    "                    cols = [f\"x{i}\" for i in range(1, ncols + 1)]\n",
-    "\n",
-    "            Xdf = pd.DataFrame(Xarr, columns=cols)\n",
-    "\n",
-    "        # ---- Coerce y to single-column DataFrame (preserve DF object) ----\n",
     "        if isinstance(y, pd.DataFrame):\n",
-    "            if y.shape[1] != 1:\n",
-    "                raise ValueError(\"y must have exactly one column.\")\n",
-    "            Ydf = y  # exact object\n",
+    "            self.y = y\n",
     "        else:\n",
     "            yarr = np.asarray(y).reshape(-1, 1)\n",
-    "            Ydf = pd.DataFrame(yarr, columns=[\"y\"])\n",
+    "            self.y = pd.DataFrame(yarr, columns=[\"y\"])\n",
     "\n",
-    "        self.x = Xdf\n",
-    "        self.y = Ydf\n",
     "        self.create_intercept = bool(create_intercept)\n",
-    "        self.regression_type = str(regression_type).lower()\n",
+    "        self.regression_type = regression_type.lower()\n",
     "        self.results = {}\n",
     "\n",
-    "    # Add intercept only for computation (do not mutate self.x)\n",
+    "    # Helper: add intercept if requested\n",
     "    def _with_intercept_if_needed(self):\n",
     "        if \"intercept\" in self.x.columns or not self.create_intercept:\n",
     "            return self.x\n",
@@ -1093,17 +1085,20 @@
     "        tmp.insert(0, \"intercept\", 1.0)\n",
     "        return tmp\n",
     "\n",
-    "    # ---- Minimal Student-t helpers (no SciPy) ----\n",
+    "    # --- t distribution cdf + p-value helpers ---\n",
     "    def _betacf(self, a, b, x, max_iter=200, eps=3e-12):\n",
     "        am = bm = az = 1.0\n",
     "        qab, qap, qam = a + b, a + 1.0, a - 1.0\n",
-    "        bz = 1.0 - (qab * x / qap)\n",
+    "        bz = 1.0 - qab * x / qap\n",
     "        for m in range(1, max_iter + 1):\n",
-    "            em = float(m); tem = float(2 * m)\n",
+    "            em = float(m)\n",
+    "            tem = 2 * m\n",
     "            d = (em * (b - em) * x) / ((qam + tem) * (a + tem))\n",
-    "            ap, bp = az + d * am, bz + d * bm\n",
+    "            ap = az + d * am\n",
+    "            bp = bz + d * bm\n",
     "            d = -((a + em) * (qab + em) * x) / ((a + tem) * (qap + tem))\n",
-    "            app, bpp = ap + d * az, bp + d * bz\n",
+    "            app = ap + d * az\n",
+    "            bpp = bp + d * bz\n",
     "            aold = az\n",
     "            am, bm, az, bz = ap / bpp, bp / bpp, app / bpp, 1.0\n",
     "            if abs(az - aold) <= eps * abs(az):\n",
@@ -1111,11 +1106,16 @@
     "        return az\n",
     "\n",
     "    def _incbeta(self, a, b, x):\n",
-    "        if x <= 0.0: return 0.0\n",
-    "        if x >= 1.0: return 1.0\n",
+    "        if x <= 0.0:\n",
+    "            return 0.0\n",
+    "        if x >= 1.0:\n",
+    "            return 1.0\n",
     "        bt = math.exp(\n",
-    "            math.lgamma(a + b) - math.lgamma(a) - math.lgamma(b)\n",
-    "            + a * math.log(x) + b * math.log(1.0 - x)\n",
+    "            math.lgamma(a + b)\n",
+    "            - math.lgamma(a)\n",
+    "            - math.lgamma(b)\n",
+    "            + a * math.log(x)\n",
+    "            + b * math.log(1.0 - x)\n",
     "        )\n",
     "        if x < (a + 1.0) / (a + b + 2.0):\n",
     "            return bt * self._betacf(a, b, x) / a\n",
@@ -1127,25 +1127,21 @@
     "        ib = self._incbeta(df / 2.0, 0.5, x)\n",
     "        return 1.0 - 0.5 * ib if t >= 0 else 0.5 * ib\n",
     "\n",
-    "    def _p_vals_from_t(self, t_vals, df):\n",
+    "    def _p_values_from_t(self, t_vals, df):\n",
     "        t_vals = np.asarray(t_vals, dtype=float)\n",
     "        cdf_abs = np.vectorize(lambda z: self._t_cdf(abs(z), df))(t_vals)\n",
     "        return 2.0 * (1.0 - cdf_abs)\n",
     "\n",
-    "    # ---- OLS core ----\n",
+    "    # --- OLS regression ---\n",
     "    def ols_regression(self):\n",
     "        if self.regression_type != \"ols\":\n",
-    "            if self.regression_type == \"logit\":\n",
-    "                raise NotImplementedError(\"Logit not required.\")\n",
-    "            raise ValueError(\"regression_type must be 'ols' or 'logit'.\")\n",
+    "            raise ValueError(\"Only OLS regression supported.\")\n",
     "\n",
     "        Xdf = self._with_intercept_if_needed()\n",
     "        X = Xdf.to_numpy(dtype=float)\n",
     "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)\n",
     "\n",
     "        n, k = X.shape\n",
-    "        if y.shape[0] != n:\n",
-    "            raise ValueError(\"x and y must have the same number of rows.\")\n",
     "        if n <= k:\n",
     "            raise ValueError(\"Not enough observations for OLS (n must exceed k).\")\n",
     "\n",
@@ -1160,10 +1156,8 @@
     "        dof = n - k\n",
     "        sigma2 = float((resid.T @ resid) / dof)\n",
     "        se = np.sqrt(np.diag(sigma2 * XtX_inv)).reshape(-1, 1)\n",
-    "\n",
-    "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
-    "            t_stats = (beta / se).flatten()\n",
-    "        p_vals = self._p_vals_from_t(t_stats, df=dof)\n",
+    "        t_stats = (beta / se).flatten()\n",
+    "        p_vals = self._p_values_from_t(t_stats, df=dof)\n",
     "\n",
     "        self.results = {}\n",
     "        for i, col in enumerate(Xdf.columns):\n",
@@ -1175,13 +1169,11 @@
     "            }\n",
     "        return self\n",
     "\n",
-    "    # ---- Summary table with exact expected headers ----\n",
     "    def summary(self):\n",
     "        if not self.results:\n",
     "            self.ols_regression()\n",
     "        rows = []\n",
-    "        for var in self.results.keys():\n",
-    "            r = self.results[var]\n",
+    "        for var, r in self.results.items():\n",
     "            rows.append({\n",
     "                \"Variable name\": var,\n",
     "                \"coefficient value\": round(r[\"coefficient\"], 3),\n",
